LIBSEARCH-6 Removed UMD reference in config file.
https://issues.umd.edu/browse/LIBSEARCH-6

--- a/config/lib_answers_config.yml
+++ b/config/lib_answers_config.yml
@@ -4,11 +4,12 @@
 # your installation.
 #
 # <YOUR_IID>: The iid for your site
+# <LOADED_LINK>: The direct link to your LibAnswers site
 
 defaults: &defaults
   base_url: "https://api2.libanswers.com/1.0/search/"
   query_params: "?iid=<YOUR_IID>&limit=3"
-  loaded_link: "http://umd.libanswers.com/search?q="
+  loaded_link: "<LOADED_LINK>"
 
 development:
   <<: *defaults
